<resources>
    <string name="app_name">Unbeatable Tic Tac Toe</string>
    <string name="t">T</string>
    <string name="i">I</string>
    <string name="a">A</string>
    <string name="o">O</string>
    <string name="e">E</string>
    <string name="c">C</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="new_game">New Game</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="turn">Turn:</string>
</resources>
