<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.seafle.satish.unbeatabletictactoe.MainActivity">

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/t"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b1"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="90dp" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/i"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b2"
        android:layout_alignBottom="@+id/b1"
        android:layout_toRightOf="@+id/b1"
        android:layout_toEndOf="@+id/b1"        />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/c"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b3"
        android:layout_alignTop="@+id/b2"
        android:layout_toRightOf="@+id/b2"
        android:layout_toEndOf="@+id/b2"/>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/t"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b4"
        android:layout_below="@+id/b1"
        android:layout_toLeftOf="@+id/b2"
        android:layout_toStartOf="@+id/b2"
        />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/a"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b5"
        android:layout_below="@+id/b1"
        android:layout_toRightOf="@+id/b1"
        android:layout_toEndOf="@+id/b1"/>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/c"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b6"
        android:layout_alignBottom="@+id/b5"
        android:layout_toRightOf="@+id/b5"
        android:layout_toEndOf="@+id/b5"/>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/t"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b7"
        android:layout_below="@+id/b4"
        android:layout_alignLeft="@+id/b4"
        android:layout_alignStart="@+id/b4"
        />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/o"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b8"
        android:layout_below="@+id/b5"
        android:layout_toLeftOf="@+id/b6"
        android:layout_toStartOf="@+id/b6"
        />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/e"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:background="@drawable/board_btn"
        android:id="@+id/b9"
        android:layout_below="@+id/b5"
        android:layout_alignRight="@+id/b6"
        android:layout_alignEnd="@+id/b6"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Single Player"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:id="@+id/single_player"
        android:layout_below="@+id/b7"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:background="@drawable/btn_background"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Two Player"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:id="@+id/two_player"
        android:layout_below="@+id/single_player"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:background="@drawable/btn_background"
        />

    <!--<Button
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="@string/one_player"
        android:id="@+id/btn_one_player"
        android:textColor="@color/white"
        android:layout_below="@+id/textView"
        android:background="@color/green"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="@string/two_player"
        android:textColor="@color/white"
        android:id="@+id/btn_two_player"
        android:background="@color/green"
        android:layout_below="@+id/btn_one_player"
        android:layout_centerHorizontal="true" />
-->



</RelativeLayout>
